# PiComte

./: .gitignore  CMakeLists.txt  PiComte_en_US.ts  README.md  readme.md
resources/: resources.qrc
src/: mainwindow.cpp  mainwindow.h
